--- a/style.css
+++ b/style.css
@@ -51,6 +51,54 @@ img {
     padding-bottom: 100px;
 }
 
+.main-cards h2 {
+    text-align: center;
+    padding-top: 50px;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.card {
+    max-width: 200px;
+}
+
+.card img {
+    width: 200px;
+    border-radius: 20px;
+    outline: 3px solid #3882f6;
+}
+
+.cards {
+    display: flex;
+    gap: 40px;
+    justify-content: center;
+    padding: 50px 0;
+    text-align: center;
+}
+
+.testimonial-box {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 150px;
+    
+}
+
+.testimonial-quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1F2937;
+}
+
+.testimonial-author {
+    color: #1F2937;
+    font-size: 23px;
+    font-weight: bold;
+    align-self: flex-end;
+}
 
 * {
     /* outline: 2px solid red; */
